# DrugiTinder

./: .gitignore  changed_DDL.sql  etap1.drawio  indexes.sql  kwerendy.sql  link  run_query.sql  zmiany
SQL/: pomysly  z1.sql  z2.sql  z3.sql  z4.sql
altered_database/: Dockerfile  README.md  alter_db.sql  alter_db_2.sql  cleanup.sql  ddl.sql  deploy.sh  diagnostics.sql  kill.sh  migrate.sh  new_ddl.sql  populate.sh  populate_rust.sh  prompt.txt  test_run.sh  test_run_rust.sh
altered_database/population_rewritten/: Cargo.toml  config.yml  plans.csv  sexes.csv
altered_database/population_rewritten/src/: config.rs  main.rs  models.rs
altered_database/population_rewritten/src/db/: bulk.rs  mod.rs
altered_database/population_rewritten/src/generators/: content.rs  interactions.rs  mod.rs  social.rs  static_data.rs  users.rs
skrypt/: README  config.py  config.yml  createAccounts.py  createAdmins.py  createBlocks.py  createConversations.py  createCountries.py  createHardcoded.py  createMatches.py  createPreferences.py  createReports.py  createSubscriptions.py  createUsers.py  dbConnection.py  emptyDatabase.py  interests.csv  messageGenerator.py  parsedCountries.csv  populateDB.py  reportReasons.csv  requirements.txt  utils.py
