[package]
name = "population_rewritten"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = "0.10"
futures = "0.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
csv = "1.3"
fake = { version = "2.9", features = ["derive", "chrono", "http"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
bcrypt = "0.15"
indicatif = "0.17"
lazy_static = "1.4"
bytes = { version = "1.11.0", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
